# argus

./: .gitignore  CMakeLists.txt  README.md  main.cpp
workers/: image_library.cpp  image_library.h
